k8s/apps/hass-proxy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hass-proxy
  namespace: tailscale-agent
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hass-proxy
  template:
    metadata:
      labels:
        app: hass-proxy
      annotations:
        headscale.juliamertz.dev/tailscale-inject-sidecar: "true"
        headscale.juliamertz.dev/tailscale-extra-args: --login-server https://headscale.juliamertz.nl:30443 --accept-routes --advertise-tags=tag:tailscale-sidecar
        headscale.juliamertz.dev/tailscale-auth-secret: tailscale-agent-auth
    spec:
      containers:
      - name: caddy
        image: caddy:latest
        command: ["sh", "-c"]
        args:
        - |
          cat <<'CADDYFILE' > /tmp/Caddyfile
          { 
              admin off
          }
          :80 {
              reverse_proxy hydra.headscale.local:8123
          }
          CADDYFILE
          caddy run --config /tmp/Caddyfile
        ports:
        - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: hass-proxy
  namespace: tailscale-agent
spec:
  type: ClusterIP
  selector:
    app: hass-proxy
  ports:
    - name: http
      port: 80

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hass-proxy-routes-redirect
  namespace: tailscale-agent
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: shared
      namespace: default
      sectionName: http
  hostnames:
    - hass.juliamertz.dev
    - hass.juliamertz.nl
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hass-proxy-routes
  namespace: tailscale-agent
spec:
  hostnames:
    - hass.juliamertz.dev
    - hass.juliamertz.nl
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: shared
      namespace: default
      sectionName: https
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: hass-proxy
          port: 80
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /

---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: hass-proxy-auth
  namespace: tailscale-agent
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: hass-proxy-routes
  extAuth:
    headersToExtAuth:
      - accept
      - cookie
      - authorization
      - proxy-authorization
      - x-forwarded-proto
    failOpen: false
    http:
      backendRefs:
        - name: authelia
          namespace: authelia
          port: 80
      path: /api/authz/ext-authz/
      headersToBackend:
        - Remote-User
        - Remote-Groups
        - Remote-Name
        - Remote-Email

# ---
# apiVersion: headscale.juliamertz.dev/v1
# kind: PreauthKey
# metadata:
#   name: agent-auth
#   namespace: envoy-gateway-system
# spec:
#   ephemeral: true
#   reusable: true
#   expiration: 100y
#   targetSecret: tailnet-gateway-auth
#   user:
#     name: kubernetes 
#     namespace: tailscale-agent
#
# ---
# apiVersion: gateway.envoyproxy.io/v1alpha1
# kind: EnvoyProxy
# metadata:
#   name: tailnet-proxy-config
#   namespace: tailscale-agent
# spec:
#   provider:
#     type: Kubernetes
#     kubernetes:
#       envoyService:
#         type: ClusterIP
#       envoyDeployment:
#         replicas: 1 
#         pod:
#           automountServiceAccountToken: false
#           annotations:
#             headscale.juliamertz.dev/tailscale-inject-sidecar: "true"
#             headscale.juliamertz.dev/tailscale-extra-args: --login-server https://headscale.juliamertz.nl:30443 --accept-routes --advertise-tags=tag:tailscale-sidecar
#             headscale.juliamertz.dev/tailscale-auth-secret: tailnet-gateway-auth
#
# ---
# apiVersion: gateway.networking.k8s.io/v1
# kind: GatewayClass
# metadata:
#   name: envoy-tailnet
# spec:
#   controllerName: gateway.envoyproxy.io/gatewayclass-controller
#   parametersRef:
#     group: gateway.envoyproxy.io
#     kind: EnvoyProxy
#     name: tailnet-proxy-config
#     namespace: tailscale-agent
#
# ---
# apiVersion: gateway.networking.k8s.io/v1
# kind: Gateway
# metadata:
#   name: tailnet-gateway
#   namespace: tailscale-agent
# spec:
#   gatewayClassName: envoy-tailnet
#   listeners:
#     - name: http
#       protocol: HTTP
#       port: 80
#       allowedRoutes:
#         namespaces:
#           from: All
#
# ---
# apiVersion: v1
# kind: Service
# metadata:
#   name: hydra-backend
#   namespace: tailscale-agent
# spec:
#   type: ExternalName
#   externalName: hydra.headscale.local
#   ports:
#   - name: home-assistant
#     port: 8123
#
# ---
# apiVersion: gateway.networking.k8s.io/v1
# kind: HTTPRoute
# metadata:
#   name: testing-homelab-routes
#   namespace: tailscale-agent
# spec:
#   hostnames: []
#   parentRefs:
#     - group: gateway.networking.k8s.io
#       kind: Gateway
#       name: tailnet-gateway
#       namespace: tailscale-agent
#   rules:
#   - backendRefs:
#     - name: hydra-backend
#       port: 8123
