k8s/apps/jellyfin-proxy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellyfin-proxy
  namespace: tailscale-agent
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jellyfin-proxy
  template:
    metadata:
      labels:
        app: jellyfin-proxy
      annotations:
        headscale.juliamertz.dev/tailscale-inject-sidecar: "true"
        headscale.juliamertz.dev/tailscale-extra-args: --login-server https://headscale.juliamertz.nl:30443 --accept-routes --advertise-tags=tag:tailscale-sidecar
        headscale.juliamertz.dev/tailscale-auth-secret: tailscale-agent-auth
    spec:
      containers:
      - name: caddy
        image: caddy:latest
        command: ["sh", "-c"]
        args:
        - |
          cat <<'CADDYFILE' > /tmp/Caddyfile
          { 
              admin off
          }
          :80 {
              reverse_proxy hydra.headscale.local:8096
          }
          CADDYFILE
          caddy run --config /tmp/Caddyfile
        ports:
        - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: jellyfin-proxy
  namespace: tailscale-agent
spec:
  type: ClusterIP
  selector:
    app: jellyfin-proxy
  ports:
    - name: http
      port: 80

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: jellyfin-proxy-routes-redirect
  namespace: tailscale-agent
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: shared
      namespace: default
      sectionName: http
  hostnames:
    - watch.juliamertz.dev
    - watch.juliamertz.nl
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: jellyfin-proxy-routes
  namespace: tailscale-agent
spec:
  hostnames:
    - watch.juliamertz.dev
    - watch.juliamertz.nl
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: shared
      namespace: default
      sectionName: https
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: jellyfin-proxy
          port: 80
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /

---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: jellyfin-proxy-auth
  namespace: tailscale-agent
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: jellyfin-proxy-routes
  extAuth:
    headersToExtAuth:
      - accept
      - cookie
      - authorization
      - proxy-authorization
      - x-forwarded-proto
    failOpen: false
    http:
      backendRefs:
        - name: authelia
          namespace: authelia
          port: 80
      path: /api/authz/ext-authz/
      headersToBackend:
        - Remote-User
        - Remote-Groups
        - Remote-Name
        - Remote-Email
